--- a/tfpglisttest/tfpglisttest.lpi
+++ b/tfpglisttest/tfpglisttest.lpi
@@ -11,10 +11,13 @@
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="objtest"/>
+      <Title Value="tfpglisttest"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
+    <VersionInfo>
+      <StringTable ProductVersion=""/>
+    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
     </BuildModes>
@@ -28,7 +31,7 @@
     </RunParams>
     <Units Count="1">
       <Unit0>
-        <Filename Value="objtest.pas"/>
+        <Filename Value="tfpglisttest.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
     </Units>
@@ -37,7 +40,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="objtest"/>
+      <Filename Value="tfpglisttest"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
